syntax = "proto3";

package iam.v1;
option go_package = "api/iam/v1;iamv1"; 

import "google/api/annotations.proto";

service IamService {
  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/v1/login"
      body: "*"
    };
  }

  rpc Handshake(HandshakeRequest) returns (HandshakeResponse) {
    option (google.api.http) = {
      post: "/v1/handshake"
      body: "*"
    };
  }
}

message LoginRequest {
  string email = 1; 
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message HandshakeRequest {
  string client_public_key = 1; 
}

message HandshakeResponse {
  string server_public_key = 1;
  string session_id = 2;
  string hkdf_salt_b64 = 3;
  int32 expires_at = 4;
  string encrypted_session_data = 5;
}